Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
dev
-
None
-
-
914789307 (dev), 98af9bd9d (6.7)
Description
Error noticed when adding Windows ARM to CI and testing with these two changes:
515293: Provisioning: Add Windows 11 on ARM | https://codereview.qt-project.org/c/qt/qt5/+/515293
521034: Coin: Add native MSVC ARM64 instructions | https://codereview.qt-project.org/c/qt/qtbase/+/521034
https://testresults.qt.io/coin/integration/qt/qtbase/tasks/web_qt_qtbase_1701952918545
agent:2023/12/07 13:13:53 build.go:404: qglobal.c.obj : error LNK2019: unresolved external symbol asm referenced in function tst_qYieldCpu agent:2023/12/07 13:13:53 build.go:404: tests\auto\corelib\global\qglobal\tst_qglobal.exe : fatal error LNK1120: 1 unresolved externals